[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
description = "useful functions for working with frame-rates, sample-rates other rates, time durations, frequencies, etc and for keeping a constant framerate"
documentation = "https://snd.github.io/hertz/hertz/index.html"
homepage = "https://github.com/snd/hertz"
keywords = ["rayleigh", "nyquist", "hertz", "time", "fps"]
license = "MIT OR Apache-2.0"
name = "hertz"
readme = "README.md"
repository = "https://github.com/snd/hertz.git"
version = "0.3.0"
